<resources>
    <string name="app_name" translatable="false">Contractor\'s Business Manager</string>

    <!-- Error strings -->
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_user_exists">A user with this email already exists</string>
    <string name="error_short_password">Password should be at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_short_year">Year field must be YYYY format</string>

    <!-- Page Titles -->
    <string name="count_hours">Count Hours</string>
    <string name="view_calendar">View Calendar</string>
    <string name="revise_hours">Revise Hours</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_emp">Edit Employee</string>
    <string name="add_client">Add Client</string>
    <string name="add_emp">Add Employee</string>
    <string name="schedule">Schedule</string>
    <string name="view_history"> Pay Period History</string>
    <string name="timebank">Time Bank</string>
    <string name="choose_job">Choose Job</string>
    <string name="choose_day">Choose Day</string>
    <string name="add_job">Add Job</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="view_job_times">View Concurrent Jobs</string>
    <string name="schedule_emp">Schedule Employee</string>
    <string name="edit_client">Edit Client</string>
    <string name="edit_workday">Edit Workday</string>

    <!-- Strings needed for Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reenterPass">Please Re-enter Your Password</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>

    <!-- Buttons -->
    <string name="emp">Employee</string>
    <string name="admin">Admin</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calculate">Calculate</string>
    <string name="filter">Filter</string>

    <!-- Labels -->
    <!-- Hours and Pay -->
    <string name="pph">Pay Per Hour</string>
    <string name="pay_period">Pay Period</string>
    <string name="hourTotals">Hours Worked</string>
    <string name="hours">Hours</string>
    <string name="pay">Pay</string>
    <string name="totals" translatable="false">Total</string>

    <!-- Date and Time -->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="sick_time">Sick Time</string>
    <string name="vaca_time">Vacation Time</string>
    <string name="day">Day</string>
    <string name="year_format" translatable="false">YYYY</string>
    <string name="month_format" translatable="false">MM</string>
    <string name="day_format" translatable="false">DD</string>

    <!-- Names -->
    <string name="name">Name</string>
    <string name="oname">Original Name</string>
    <string name="nname">New Name</string>
    <string name="client">Client</string>

    <!-- Addresses -->
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="email">Email</string>

    <!-- Jobs -->
    <string name="job">Job</string>
    <string name="job_des">Job Description</string>
    <string name="title_activity_test" translatable="false">CBM</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="view_schedule">View Schedule</string>
</resources>
