<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aLogoutMenu"
            android:title="@string/logout" />
        <item
            android:id="@+id/aMenuMenu"
            android:title="@string/menu" />
        <item
            android:id="@+id/aViewCalendarMenu"
            android:title="@string/view_calendar" />
        <item
            android:id="@+id/aCountHoursMenu"
            android:title="@string/count_hours" />
        <item
            android:id="@+id/aReviseHoursMenu"
            android:title="@string/revise_hours" />
        <item
            android:id="@+id/aAddJobMenu"
            android:title="@string/add_job" />
        <item
            android:id="@+id/aAddClientMenu"
            android:title="@string/add_client" />
        <item
            android:id="@+id/aEditClientMenu"
            android:title="@string/edit_client" />
        <item
            android:id="@+id/aAddEmpMenu"
            android:title="@string/add_emp" />
        <item
            android:id="@+id/aEditEmpMenu"
            android:title="@string/edit_emp" />
    </group>
</menu>
