<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:layout_editor_absoluteY="81dp" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auNTIL"
        android:layout_width="395dp"
        android:layout_height="59dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auNET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auETIL"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auNTIL"
        tools:layout_editor_absoluteY="88dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auEET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auPTIL"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auETIL"
        tools:layout_editor_absoluteY="164dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auPET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/auPPHTIL"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auPTIL"
        tools:layout_editor_absoluteY="236dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/auPPHET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pph" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/auSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryAccent"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        android:onClick="auDidPressSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auPPHTIL"
        tools:layout_editor_absoluteY="381dp" />

    <Button
        android:id="@+id/auCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryAccent"
        android:text="@string/cancel"
        android:onClick="addUserDidPressCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/auSave"
        app:layout_constraintBottom_toBottomOf="@id/auSave"
        tools:layout_editor_absoluteY="381dp" />
</android.support.constraint.ConstraintLayout>